--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       
       <a href="https://twitter.com/MeiEsteban" class="btn">Twitter</a>
       <a href="https://www.youtube.com/user/meilingriselda" class="btn">Youtube</a>
+      <a href="https://meilingriselda.blogspot.com/" class="btn">Blog</a>
       
     </section>
 </section>
